--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "FreeQux",
   "license": "ISC",
   "dependencies": {
+    "JSONStream": "^1.3.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.21"
