--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "JSONStream": "^1.3.5",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
-    "mongoose": "^5.9.21"
+    "mongoose": "^5.9.21",
+    "multer": "^1.4.2"
   },
   "devDependencies": {
     "nodemon": "^2.0.4"
