--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "gastronomic-russian-map",
+  "name": "undermining_online",
   "version": "1.0.0",
-  "description": "Map of Russian Gastronomy",
+  "description": "Interesting simple game",
   "main": "app.js",
   "scripts": {
     "start": "node app",
@@ -11,7 +11,9 @@
   "author": "FreeQux",
   "license": "ISC",
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
     "JSONStream": "^1.3.5",
+    "cookie-parser": "^1.4.6",
     "express": "^4.17.1",
     "express-handlebars": "^4.0.4",
     "mongoose": "^5.9.21",
